--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: CdiffFragR
 Title: Match FSA files to a Database
 Version: 0.0.0.9000
-Author:  N. V. Pinkham 
-Maintainer:  N. V. Pinkham <biopinkham@gmail.com>
+Author: N. V. Pinkham 
+Maintainer: N. V. Pinkham <biopinkham@gmail.com>
 Imports: MLPA, bayestestR, vegan, permute, and lattice
 Description: FragmentR is an R tool for DNA fragment analysis, developed and maintained by the Walk Lab at MSU Bozeman.
 License: GNU General Public License v3.0
@@ -10,3 +10,5 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Depends: 
+    R (>= 2.10)
